[project]
name = "openthoughts-agent-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "harbor>=0.1.33",
    "nest-asyncio>=1.6.0",
    "ruff>=0.14.10",
    "streamlit>=1.52.2",
    "ty>=0.0.8",
    "watchdog>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ot_agent_v1"]
